tests/baselines/reference/implicitAnyAmbients.errors.txt
==== tests/cases/compiler/implicitAnyAmbients.ts (9 errors) ====
    
    declare module m {
        var x; // error
            ~
!!! implicitAnyAmbients.ts(3,9): error TS7005: Variable 'x' implicitly has an 'any' type.
        var y: any;
    
        function f(x); // error 
        ~~~~~~~~~~~~~~
!!! implicitAnyAmbients.ts(6,5): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
                   ~
!!! implicitAnyAmbients.ts(6,16): error TS7006: Parameter 'x' of 'f' implicitly has an 'any' type.
        function f2(x: any); // error
        ~~~~~~~~~~~~~~~~~~~~
!!! implicitAnyAmbients.ts(7,5): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
        function f3(x: any): any;
    
        interface I {
            foo(); // error
            ~~~~~
!!! implicitAnyAmbients.ts(11,9): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            foo2(x: any); // error
            ~~~~~~~~~~~~
!!! implicitAnyAmbients.ts(12,9): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
            foo3(x: any): any;
        }
    
        class C {
            foo(); // error
            ~~~~~~
!!! implicitAnyAmbients.ts(17,9): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            foo2(x: any); // error
            ~~~~~~~~~~~~~
!!! implicitAnyAmbients.ts(18,9): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
            foo3(x: any): any;
        }
    
        module n {
            var y; // error
                ~
!!! implicitAnyAmbients.ts(23,13): error TS7005: Variable 'y' implicitly has an 'any' type.
        }
    
        import m2 = n;
    }